# CryptoCats

./: Anchor.toml  README.md
app/: package.json
app/src/app/: layout.tsx  page.tsx
assets/: render.py
programs/cryptocats/: Cargo.toml
programs/cryptocats/src/: lib.rs
scripts/: deploy.sh
tests/: cryptocats.test.ts
traits/: traits.json
