[package]
name = "cryptocats"
version = "0.1.0"
description = "Anchor program for CryptoCats NFT airdrops"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cryptocats"

[features]
default = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
solana-program = "1.18.26"

[dev-dependencies]
anchor-client = "0.30.1"
